nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: library/nextcloud:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "6Gi"
            requests:
              memory: "4Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-base
            - mountPath: /var/www/html/data/sean
              name: nextcloud-data
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: data
        - name: nextcloud-base
          persistentVolumeClaim:
            claimName: base
